WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269082
[Playstation] Fix build break after
274356@main
https://bugs.webkit.org/show_bug.cgi?id=269082
Summary
[Playstation] Fix build break after 274356@main
Jigen Zhou
Reported
2024-02-09 11:37:35 PST
After
274356@main
, build for PlayStation breaks due to the unnecessary WEBCORE_EXPORT declared for a member of a class declared WEBCORE_EXPORT. D:/merging-webkit/build-job/Source/WebCore/platform/graphics\MediaSourcePrivate.h:110:5: error: attribute 'dllexport' cannot be applied to member of 'dllexport' class 04:25:01 110 | WEBCORE_EXPORT void ensureOnDispatcher(Function<void()>&&) const; 04:25:01 | ^ 04:25:01 D:/merging-webkit/build-job/Source/WebCore/platform\PlatformExportMacros.h:37:24: note: expanded from macro 'WEBCORE_EXPORT' 04:25:01 37 | #define WEBCORE_EXPORT WTF_EXPORT_DECLARATION 04:25:01 | ^ 04:25:01 D:/merging-webkit/build-job/build-67d0/Release/WTF/Headers\wtf/ExportMacros.h:51:43: note: expanded from macro 'WTF_EXPORT_DECLARATION' 04:25:01 51 | #define WTF_EXPORT_DECLARATION __declspec(dllexport) 04:25:01 | ^ 04:25:01 D:/merging-webkit/build-job/Source/WebCore/platform/graphics\MediaSourcePrivate.h:61:7: note: previous attribute is here 04:25:01 61 | class WEBCORE_EXPORT MediaSourcePrivate 04:25:01 | ^ 04:25:01 D:/merging-webkit/build-job/Source/WebCore/platform\PlatformExportMacros.h:37:24: note: expanded from macro 'WEBCORE_EXPORT' 04:25:01 37 | #define WEBCORE_EXPORT WTF_EXPORT_DECLARATION 04:25:01 | ^ 04:25:02 D:/merging-webkit/build-job/build-67d0/Release/WTF/Headers\wtf/ExportMacros.h:51:43: note: expanded from macro 'WTF_EXPORT_DECLARATION' 04:25:02 04:25:02 51 | #define WTF_EXPORT_DECLARATION __declspec(dllexport) 04:25:02 04:25:02 | ^ 04:25:02 04:25:02 1 error generated.
Attachments
Add attachment
proposed patch, testcase, etc.
Jigen Zhou
Comment 1
2024-02-09 13:30:38 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24165
EWS
Comment 2
2024-02-09 15:12:19 PST
Committed
274394@main
(dff5dac5d6ca): <
https://commits.webkit.org/274394@main
> Reviewed commits have been landed. Closing PR #24165 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-02-09 15:13:15 PST
<
rdar://problem/122672878
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug