Fix PlayStation build break after 274356@main https://bugs.webkit.org/show_bug.cgi?id=269082

Reviewed by Don Olmstead.

An unnecessary WEBCORE_EXPORT was declared for a member of MediaSourcePrivate (declared WEBCORE_EXPORT).
Also restored UNUSED_PARAM check for used parameter for RELEASE_LOG_DISABLED

* Source/WebCore/Modules/mediasource/SourceBuffer.cpp:
* Source/WebCore/platform/graphics/MediaSourcePrivate.h:

Canonical link: https://commits.webkit.org/274394@main